--- a/src/pages/jokes/styles.module.css
+++ b/src/pages/jokes/styles.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   row-gap: 60px;
   align-items: center;
-  margin: 0 auto 20px auto;
+  margin: 60px auto 20px auto;
 }
 
 .count {
